fixed alignment with login words

--- a/src/plannerFrontend/pages/pages.css
+++ b/src/plannerFrontend/pages/pages.css
@@ -84,6 +84,9 @@ h3 {
   text-align:center;
   margin-bottom: 50px;
   padding: 0 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .heading p {
